fixes for viewport zoom on iOS, landscape mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,10 @@
 	--accent-color-5: #9f00ff;
 }
 
+html {
+	padding: env(safe-area-inset);
+}
+
 body {
 	font-family: 'IBM Plex Sans', Verdana, sans-serif;
 	font-size: 18px;
